samples/_failures_safe/1761276362_2ef557_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fc45d913.c: In function ‘main’:
./samples/SAFE/__tmp_fc45d913.c:129:16: error: missing terminating " character
  129 |         printf("Invalid number of edges.\n
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_fc45d913.c:129:9: error: expected expression at end of input
  129 |         printf("Invalid number of edges.\n
      |         ^~~~~~
./samples/SAFE/__tmp_fc45d913.c:129:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_fc45d913.c:129:9: error: expected declaration or statement at end of input
